k8s/production/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ezops-backend
  namespace: test-chico
  labels:
    app: ezops-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ezops-backend
  template:
    metadata:
      labels:
        app: ezops-backend
    spec:
      containers:
        - name: backend
          # Image from Terraform Output: ecr_repository_urls["backend"]
          image: 654654369899.dkr.ecr.us-east-1.amazonaws.com/test-chico-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
